--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
+    "@types/react-dnd": "^2.0.36",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
