--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
-    "@types/react-dnd": "^2.0.36",
-    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
@@ -19,7 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
